--- a/Homework1_ProblemSet.ipynb
+++ b/Homework1_ProblemSet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "68311919-5c07-4475-a3d3-ba70c850e06e",
    "metadata": {
     "tags": []
@@ -82,43 +82,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb36cae3-6344-428b-9d97-ebe35b743109",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'XXX', 'q3': 'XXX', 'q4': 123, 'q5': 'XXX', 'q6': 123, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n",
+      "Hello my name is Name\n"
+     ]
+    }
+   ],
    "source": [
     "# Q1 - Concatenate the following strings with a space inbetween them (do not change the name).\n",
     "string_1 = 'Hello my name is'\n",
     "name = 'Name'\n",
-    "q1 = 'xxx'\n",
+    "q1 = string_1 +\" \"+ name\n",
     "\n",
-    "saveResults()"
+    "saveResults()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8f5fa2d5-598a-4244-a9ef-b0444bc67dc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'XXX', 'q4': 123, 'q5': 'XXX', 'q6': 123, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q2 = Convert the following string to uppercase\n",
     "string_2 = 'i would like to be uppercase'\n",
-    "q2 = 'xxx'\n",
+    "q2 = string_2.upper()\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d2f6938c-1036-4622-94c4-d03ed23ae5dd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "apples\n",
+      "Saturday\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 123, 'q5': 'XXX', 'q6': 123, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q3 - use string formatting to construct the following string: \n",
     "#. \"I bought [number] [fruit] on [day].\" where:\n",
@@ -128,66 +159,110 @@
     "print(number)\n",
     "print(fruit)\n",
     "print(day)\n",
-    "q3 = 'xxx'\n",
+    "q3 = 'I bought ' + str(number) +' '+ str(fruit) + ' on ' + str(day) + '.'\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "adc7baac-3d62-400e-8e5b-a66eb12e117e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An alacritous abalone accelerates along an alarming aquatic ascent.\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'XXX', 'q6': 123, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q4 - count the number of a's in the string \"string_4\"\n",
     "print(string_4)\n",
-    "q4 = 123\n",
+    "q4 = string_4.count('a')\n",
     "\n",
-    "saveResults()"
+    "saveResults()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "87dfc22b-0d94-4cc6-ab7c-cd484c67c919",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A                       large space was here.\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 123, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q5 - Strip \"string_5\" to remove all spaces and return the result as 'q5'\n",
     "print(string_5)\n",
-    "q5 = 'xxx'\n",
+    "q5 = string_5.replace(\" \", \"\")\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "57fe3ee3-f84f-4839-bed2-5ca82691a87c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATCGTGCATGCTGAGTGGCGAGCGGCGGCCGTACGCTGTTACTTAAAACGTAGCTGTAAAAAAC            GCTGCTGATGCTGTGCATGTGACTAGCTGCATGTGTGACTGACTGCTGACGTACTGTACGTACG            ATGGTTCGTGCGATGCGCTTGACGTGTCGTAGTGCATGCTGCTAGCTGATCGATGTGTCGAGTC\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': 'XXX', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q6 - How long is the string \"string_6\"?\n",
-    "q6 = 123\n",
+    "print(string_6)\n",
+    "q6 = len(string_6)\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5df84638-359e-4ce2-8e90-925c40614253",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "3\n",
+      "2\n",
+      "9.870e+00\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '9.870e+00', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['blueberries', 'bananas', 'pears', 'strawberries', 'apples'], 'q11': {1: 'Jim', 2: 'John', 3: 'Jenna', 4: 'Jamal', 5: 'Jaden'}, 'q12': [1, 3, 5, 7]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q7 - Write a STRING that contains the value of pi^[nPower]. \n",
     "# Use exponent form to the 3rd decimal point (e.g., 2.500e+00).\n",
@@ -195,7 +270,11 @@
     "print(pi)\n",
     "print(nDigits)\n",
     "print(nPower)\n",
-    "q7 = \"1.23456\"\n",
+    "answ = np.power(pi,nPower)\n",
+    "\n",
+    "q7 = \"{:.{prec}e}\".format(answ, prec=nDigits)\n",
+    "\n",
+    "print(q7)\n",
     "\n",
     "saveResults()"
    ]
@@ -212,79 +291,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "478785c4-c27a-4e62-ab36-8695589b3291",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[82.84546407589558, 76.46815772079808, 59.95204851811137, 2.452424401801756, 76.25424130933108, 46.45689014178595, 15.017755384607167, 62.32900463948706, 92.74450424602381, 56.21729543767845, 89.33732272804905, 34.324371259583984, 11.709614695770753, 34.58580569156716, 35.41370734495328, 96.96251585503731, 97.54495818277516, 38.863619064853175, 68.37147420856839, 53.067563402120946]\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '1.23456', 'q8': 56.54593691543996, 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q8 - Consider the numbers in the list \"xData\", and compute their average.\n",
     "print(xData)\n",
-    "q8 = 1.23  # Change this to produce the average of the numbers in 'xData'\n",
+    "sum = 0\n",
+    "n = len(xData)\n",
+    "\n",
+    "for i in (xData):\n",
+    "    sum +=i\n",
+    "\n",
+    "average = sum/n\n",
+    "\n",
+    "q8 = average \n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "52ccb85f-cbc6-46ab-ae0c-657d92d17cc1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[82.84546407589558, 76.46815772079808, 59.95204851811137, 2.452424401801756, 76.25424130933108, 46.45689014178595, 15.017755384607167, 62.32900463948706, 92.74450424602381, 56.21729543767845, 89.33732272804905, 34.324371259583984, 11.709614695770753, 34.58580569156716, 35.41370734495328, 96.96251585503731, 97.54495818277516, 38.863619064853175, 68.37147420856839, 53.067563402120946]\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '1.23456', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q9 - What's the last entry in the list \"xData\".  Get this by slicing the list.\n",
     "print(xData)\n",
-    "q9 = [1.23]\n",
+    "q9 = xData[-1]\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1bac04df-6fb1-4ee9-ac15-9a21d5dbf087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blueberries', 'bananas', 'pears', 'strawberries', 'apples']\n",
+      "['blueberries', 'bananas', 'pears', 'strawberries', 'apples']\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '1.23456', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['blueberries', 'bananas', 'pears', 'strawberries', 'apples'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q10 - Convert between lists and sets to remove duplicate entries from the list \"List10\"\n",
     "print(List10)\n",
+    "List10_set = set(List10)  #A set in Python is an unordered collection of unique elements.\n",
+    "List10 = list(List10_set)\n",
     "q10 = List10\n",
+    "print(List10)\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "84efaca0-7f30-4a5f-b973-054970681a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "['Jim', 'John', 'Jenna', 'Jamal', 'Jaden']\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '1.23456', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['blueberries', 'bananas', 'pears', 'strawberries', 'apples'], 'q11': {1: 'Jim', 2: 'John', 3: 'Jenna', 4: 'Jamal', 5: 'Jaden'}, 'q12': [1, 3, 5, 7]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q11 - Combine the lists 'Student_IDs' and 'Student_names' into a dictionary keyed by the IDs. \n",
     "# i.e. Create a dictionary with pairs of { ID : student name }\n",
     "print(Student_IDs)\n",
     "print(Student_names)\n",
-    "q11 = 'xxx'\n",
+    "q11 = dict(zip(Student_IDs, Student_names))\n",
+    "\n",
     "\n",
     "saveResults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "13f4c066-44df-4b82-a78d-4dd2ff590f03",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[1, 3, 5, 7]\n",
+      "Your answers so far are:\n",
+      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '1.23456', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['blueberries', 'bananas', 'pears', 'strawberries', 'apples'], 'q11': 'xxx', 'q12': [1, 3, 5, 7]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Q12 - Slice to get every other entry in the list 'List12'\n",
     "print(List12)\n",
-    "q12 = 'xxx'\n",
-    "\n",
+    "q12 = List12[0::2]\n",
+    "print(List12[0::2])\n",
     "saveResults()"
    ]
   }
@@ -305,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
