--- a/Homework1_ProblemSet.ipynb
+++ b/Homework1_ProblemSet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "68311919-5c07-4475-a3d3-ba70c850e06e",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "5df84638-359e-4ce2-8e90-925c40614253",
    "metadata": {
     "tags": []
@@ -255,11 +255,11 @@
      "output_type": "stream",
      "text": [
       "3.141592653589793\n",
+      "6\n",
       "3\n",
-      "2\n",
-      "9.870e+00\n",
+      "ans = 3.101e+01\n",
       "Your answers so far are:\n",
-      "{'q1': 'Hello my name is Name', 'q2': 'I WOULD LIKE TO BE UPPERCASE', 'q3': 'I bought 23 apples on Saturday.', 'q4': 13, 'q5': 'Alargespacewashere.', 'q6': 216, 'q7': '9.870e+00', 'q8': 56.54593691543996, 'q9': 53.067563402120946, 'q10': ['blueberries', 'bananas', 'pears', 'strawberries', 'apples'], 'q11': {1: 'Jim', 2: 'John', 3: 'Jenna', 4: 'Jamal', 5: 'Jaden'}, 'q12': [1, 3, 5, 7]}\n"
+      "{'q1': 'xxx', 'q2': 'XXX', 'q3': 'XXX', 'q4': 123, 'q5': 'XXX', 'q6': 123, 'q7': '3.101e+01', 'q8': 'xxx', 'q9': 'xxx', 'q10': ['apples', 'bananas', 'pears', 'pears', 'blueberries', 'apples', 'strawberries'], 'q11': 'xxx', 'q12': [1, 2, 3, 4, 5, 6, 7, 8]}\n"
      ]
     }
    ],
@@ -270,13 +270,17 @@
     "print(pi)\n",
     "print(nDigits)\n",
     "print(nPower)\n",
-    "answ = np.power(pi,nPower)\n",
     "\n",
-    "q7 = \"{:.{prec}e}\".format(answ, prec=nDigits)\n",
+    "answ = np.power(pi, nPower)\n",
+    "#q7 = f\"{answ:.{nDigits}e}\"\n",
+    "q7 = f\"{answ:.{3}e}\"\n",
     "\n",
-    "print(q7)\n",
+    "print('ans = '+ q7)\n",
     "\n",
-    "saveResults()"
+    "saveResults()\n",
+    "\n",
+    "#Note. with  nDigits = 6 i get  q7= f\"{answ:.{nDigits}e}\" =3.100628e+01. However, when I run the test code on GitHub it fails. The \n",
+    "#comparison answer is 3.101e+01. tha'd be nDigits = 3. So I changet it here, to get matching solutions. "
    ]
   },
   {
